<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bankinterLightGray">

    <!-- Guidelines para margen y alineación -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />


    <!-- Campo de salario -->

    <!-- Campo de texto para indicar grupo profesional -->

    <!-- Campo de texto para grado de discapacidad -->


    <!-- Campo de texto para el grupo profesional -->


    <EditText
        android:id="@+id/textHijo"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHijos"
        app:layout_constraintVertical_bias="0.0"
        android:hint="2"
        android:paddingStart="0dp"
        />

    <TextView
        android:id="@+id/textHijos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/indique_el_n_mero_de_hijos_as"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/estadoCivil" />

    <TextView
        android:id="@+id/textSalario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/introduce_su_salario_anual"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textGrupoProfesional"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/indique_su_grupo_profesional"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/textNumberEdad"
        app:layout_constraintVertical_bias="0.016" />


    <EditText
        android:id="@+id/editDiscapacidad"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textGradoDiscapacidad"
        android:hint="33%"
        android:paddingStart="0dp"/>


    <EditText
        android:id="@+id/editTextGrupoProfesional"
        android:layout_width="341dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:paddingStart="0dp"
        android:hint="@string/auxiliar_administrativo"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textGrupoProfesional" />

    <EditText
        android:id="@+id/estadoCivil"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:inputType="text"
        android:padding="12dp"
        android:hint="@string/soltero_a"
        android:paddingStart="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textEstado" />

    <TextView
        android:id="@+id/textEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/indique_su_estado_civil"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/editDiscapacidad" />

    <TextView
        android:id="@+id/textGradoDiscapacidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/indique_su_grado_de_discapacidad"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/editTextGrupoProfesional" />

    <TextView
        android:id="@+id/textEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/introduzca_su_edad"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textNumberPagas2"
        />

    <EditText
        android:id="@+id/textNumberEdad"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textEdad"
        android:hint="25"
        android:paddingStart="0dp"/>

    <TextView
        android:id="@+id/textPagas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/introduzca_el_n_mero_de_pagas"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/TextNumberSalario" />

    <EditText
        android:id="@+id/textNumberPagas2"
        android:layout_width="344dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textPagas"
        android:hint="14"
        android:paddingStart="0dp"/>

    <EditText
        android:id="@+id/TextNumberSalario"
        android:layout_width="347dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/textSalario"
        android:hint="25000"
        android:paddingStart="0dp"/>

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/bankinterDarkGray"
        android:textColor="@color/white"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHijo"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textSalario"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/bankinter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="343dp"
        android:layout_height="85dp"
        android:text="@string/Intro"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textSalario"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>